; ModuleID = '/home/carl/AnghaBench/linux/drivers/macintosh/extr_via-macii.c_need_autopoll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/macintosh/extr_via-macii.c_need_autopoll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@command_byte = common dso_local global i32 0, align 4
@autopoll_devs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @need_autopoll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @need_autopoll() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @command_byte, align 4
  %3 = and i32 %2, 15
  %4 = icmp eq i32 %3, 12
  br i1 %4, label %5, label %14

5:                                                ; preds = %0
  %6 = load i32, i32* @command_byte, align 4
  %7 = and i32 %6, 240
  %8 = ashr i32 %7, 4
  %9 = shl i32 1, %8
  %10 = load i32, i32* @autopoll_devs, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %5
  store i32 0, i32* %1, align 4
  br label %15

14:                                               ; preds = %5, %0
  store i32 1, i32* %1, align 4
  br label %15

15:                                               ; preds = %14, %13
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
